[package]
name = "gof2edit"
version = "0.8.0"
authors = ["Ravernstal"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/Ravernstal/gof2edit"
readme = "README.md"
description = "Galaxy on Fire 2 CLI tool to unpack and repack BIN files and save files, as well as patch binaries"

[dependencies]
byteorder = "1.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
